CMAKE_MINIMUM_REQUIRED(VERSION 3.1)

PROJECT(cusabnatk CXX)

SET(CMAKE_CXX_STANDARD 14)
SET(CMAKE_CXX_STANDARD_REQUIRED ON)
SET(CMAKE_CXX_EXTENSIONS OFF)

IF (NOT CMAKE_BUILD_TYPE)
  SET(CMAKE_BUILD_TYPE "Release")
ENDIF()

SET(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG}")
SET(CMAKE_CXX_FLAGS_RELEASE "-O3")

INCLUDE(CheckCXXCompilerFlag)

FIND_PACKAGE(CUDA 9.0 REQUIRED)

INCLUDE_DIRECTORIES(include/ .)

ADD_SUBDIRECTORY(src)
ADD_SUBDIRECTORY(examples)
